# antifakeai-model-package

./: README.md  README_zh.md  pyproject.toml
examples/: entry.py  main.py  model_impl.py  my_conv_model.py
src/afk_toolset_http/: __init__.py  afk_data_model.py  afk_detector.py  afk_model.py  afk_server.py  afk_utility.py
